# guildbridge

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.tr.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  self-hosted-platforms.yml
docs/: API_NOTES.md  OPERATIONS.md  PLATFORMS.md  PRIVACY.md  PRODUCTION_READINESS.md  RELEASE.md  REPOSITORY_SETTINGS.md  WINDOWS_RELEASE.md
examples/: production-evidence.example.json  template.example.json
packaging/windows/: GuildBridge.wxs  guildbridge-cli.py  guildbridge-gui.py  guildbridge-web.py
requirements/: README.md  release.txt  runtime-linux.txt  runtime.in
schema/: community-template.schema.json
scripts/: bootstrap.sh  build-windows-dist.ps1  check-content-capability-scope.py  check-github-production-settings.py  check-platform.ps1  check-platform.py  check-production-evidence.py  check-production-readiness.py  check-release-assets.py  check-release-controls.py  check-release-version.py  check-secret-hygiene.py  check-security-baseline.py  generate-icons.py  install-system-deps.sh  migrate.sh  new-production-evidence-template.py  pip-audit-truststore.py  record-provider-drill-receipt.py  record-release-asset-checksums.py  release.ps1  release.sh  sign-windows-release.ps1  verify-dist.py  verify-windows-release.ps1
src/guildbridge/: __init__.py  access.py  cli.py  config.py  content.py  diagnostics.py  gui.py  gui_assistant.py  gui_commands.py  http.py  journal.py  models.py  permissions.py  plan.py  platforms.py  privacy.py  release_assets.py  routes.py  safety.py  utils.py  web.py
src/guildbridge/providers/: __init__.py  base.py  daccord.py  discord.py  fluxer.py  matrix.py  mattermost.py  mumble.py  rocket_chat.py  spacebar.py  stoat.py  zulip.py
tests/: test_access.py  test_cli.py  test_config.py  test_content.py  test_content_capability_scope.py  test_content_journal.py  test_diagnostics.py  test_github_production_settings.py  test_gui.py  test_gui_assistant.py  test_gui_commands.py  test_gui_theme.py  test_gui_workflows.py  test_http.py  test_journal.py  test_packaging.py  test_permissions.py  test_plan.py  test_platforms.py  test_privacy.py  test_production_evidence.py  test_production_evidence_template.py  test_production_readiness_preflight.py  test_provider_adapters.py  test_provider_config.py  test_provider_contracts.py  test_provider_drill_receipt.py  test_release_assets.py  test_release_controls.py  test_routes.py  test_sbom.py  test_secret_hygiene.py  test_security_baseline.py  test_template.py  test_web.py  test_windows_packaging.py
