[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guildbridge"
version = "0.1.0"
description = "Privacy-first server/community template importer-exporter for Discord, Fluxer, Stoat, Spacebar, Daccord, Matrix/Element, Rocket.Chat, Mumble, Mattermost, and Zulip."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "GuildBridge contributors"}]
keywords = ["discord", "fluxer", "stoat", "spacebar", "daccord", "matrix", "element", "rocket.chat", "mumble", "mattermost", "zulip", "migration", "template", "community", "server"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Chat",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=8.0.0",
  "jsonschema>=4.22.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "twine>=5.1.0",
  "types-requests>=2.31.0",
]
windows-build = [
  "pyinstaller>=6.16.0",
]

[project.scripts]
guildbridge = "guildbridge.cli:main"
guildbridge-gui = "guildbridge.gui:main"
guildbridge-web = "guildbridge.web:main"

[project.urls]
Homepage = "https://github.com/Yunushan/guildbridge"
Repository = "https://github.com/Yunushan/guildbridge"
Issues = "https://github.com/Yunushan/guildbridge/issues"
Documentation = "https://github.com/Yunushan/guildbridge#readme"
Security = "https://github.com/Yunushan/guildbridge/security"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
